@@ -2772,6 +2772,18 @@ extern int slurm_load_job PARAMS((job_info_msg_t **resp, uint32_t job_id,
 				  uint16_t show_flags));
 
 /*
+ * slurm_load_job_user - issue RPC to get slurm information about all jobs
+ *	to be run as the specified user
+ * IN job_info_msg_pptr - place to store a job configuration pointer
+ * IN user_id - ID of user we want information for
+ * IN show_flags - job filtering options
+ * RET 0 or -1 on error
+ * NOTE: free the response using slurm_free_job_info_msg
+ */
+extern int slurm_load_job_user PARAMS((job_info_msg_t **resp, uint32_t user_id,
+				       uint16_t show_flags));
+
+/*
  * slurm_load_jobs - issue RPC to get slurm all job configuration
  *	information if changed since update_time
  * IN update_time - time of current configuration data
