@@ -9,6 +9,9 @@ documents those changes that are of interest to users and admins.
     execution with --exclusive option.
  -- Added ResvEpilog and ResvProlog configuration parameters to execute a
     program at the beginning and end of each reservation.
+ -- Added "slurm_load_job_user" function. This is a variation of
+    "slurm_load_jobs", but accepts a user ID argument, potentially resulting
+    in substantial performance improvement.
 
 * Changes in SLURM 2.5.1
 ========================
